--- a/inventory_pos_full_project_with_yaml/codemagic.yaml
+++ b/inventory_pos_full_project_with_yaml/codemagic.yaml
@@ -11,3 +11,6 @@ workflows:
           ./gradlew assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
+      git add codemagic.yaml
+      git commit -m 'Add first workflow'
+      git push
